# emfreeze

./: .gitignore  README.md  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
emfreeze/: __init__.py  __main__.py  cli.py  compile_build.py  copy_site_packages.py  download_embed.py
