[metadata]
name = emfreeze
description = emfreeze is a commandline tool to freeze a venv in a standalone embeddeable packages
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = MIT License
version = 0.2.1
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
packages = emfreeze

[options.entry_points]
console_scripts =
    emfreeze = emfreeze:main_cli